Fix icon touching border of compact card on Safari
See https://github.com/c-w/boardgames/issues/9

--- a/src/frontend/boards/fitf/index.scss
+++ b/src/frontend/boards/fitf/index.scss
@@ -649,6 +649,16 @@ $black: #000;
     appearance: none;
   }
 
+  &.safari {
+    .card {
+      .content.compact {
+        .suit::before {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+
   &.android {
     .hand {
       input[type="checkbox"] {
